# BranchArchitect

./: .#todo.org  .gitignore  CITATION.cff  CODEBASE_INTRO.md  LICENSE  README.md  algorithm_five.py  brancharchitect-server.spec  brancharchitect.spec  consensus_tree.ipynb  debug_log.html  debug_output.txt  debug_output2.txt  debug_output3.txt  deletion_algorithm.py  disagreement.md  functional_tree.py  install_tree_cmp.sh  msa_to_movie.py  mypy.ini  newick_to_svg.py  node.py  package-lock.json  profile_lattice.py  profile_pairwise.py  pyproject.toml  pytest.ini  pytest_report.html  pytest_report.txt  requirements.txt  run_full_pipeline.py  run_pipeline.py  start_movie_server.sh  todo.org  topology_change_algorithm.py  transfer_to_phylo_movies.sh  tree_interpolation.py  tree_list.json  tree_stack_parser.py  verify_downwards.py
.hypothesis/constants/: 0055fd3fbf67cd0a  0410ae1dfc024c13  0627efa2bd6ec04c  07b46b26a3b91b79  07d124ec5b2f91b9  0eb0668aef3efca9  10cf1aa7faf3e972  13068a9dfc6a464f  15975e4869677fb5  16c9071f963c568c  1872040a99935dc7  1875f44fd0ce95b2  1b20127d907f5f18  1c1f43eead3070ad  1ec5a75de8321497  1f0752cd27f02a42  29cdd38c87076be6  2af79373cdaaa01a  2d22eebae635593f  2e8898a2203f9dad  2fa923fc04f7cfb2  2fbdec88f2d0a578  31732fd61f8208d4  31a376721530c967  36dbd6e51018824d  375e97694cd6b35c  3b567b6954235c07  3e7c1d587617699c  (+62 more)
assets/: style.css
brancharchitect/: __init__.py  _io.py  algorithm_5.py  algorithm_five.py  algorithm_one.py  co_clustering_frequencies.py  component_distance.py  consensus.py  consensus_tree.py  deletion_algorithm.py  distances.py  functional_tree.py  io.py  jumping_taxa.py  leaf_order_distances.py  majority_consensus.py  majority_consensus_extended.py  models.py  movie_api.py  newick_parser.py  node.py  parse_utils.py  partition.py  partition_set.py  rooting.py  split.py  split_analysis.py  subtree_pruning_regrafting.py  svg.py  topology_change_algorithm.py  tree.py  tree_imbalance.py  tree_interpolation.py  tree_stack_parser.py  uuid_encoder.py
current_testfiles/: test_trees.txt
debug/: analyze_correct_order.py  analyze_failures.py  analyze_mappings_custom.py  analyze_split_matrix.py  check_algorithm_solutions.py  debug_actual_error.py  debug_all_collapsible.py  debug_builder_flow.py  debug_builder_trace.py  debug_collapse_path.py  debug_collapse_trace.py  debug_execution_trace.py  debug_full_flow.py  debug_microsteps.py  debug_missing_collapse.py  debug_missing_splits.py  debug_pair_11.py  debug_pair_5_6.py  debug_path_calc.py  debug_pivot_edge_scope.py  debug_preserved_splits.py  debug_reordering.py  debug_reordering_detailed.py  debug_split_error.py  debug_subtree_split.py  debug_tabula_rasa.py  debug_tree_structure.py  debug_weird_ordering.py  double_check.py  global_search_combinations.py  validate_mast.py  verify_all_json_tests.py  visualize_pruning.py
examples/: msa_to_movie.py
leaf_order_results/: mc_600_100.order  mcte_600_100.first_order  mcte_600_100.order  taxa_order_downwards  taxa_order_upwards
logs/: debug_log.html
misc/: test_parse_newick.py
msa_to_trees/: pyproject.toml
msa_to_trees/msa_to_trees/: pipeline.py  result.py
msa_to_trees/split_alignment/: README.md  __init__.py  __main__.py  constants.py  io_utils.py  models.py  sequence_analysis.py  validators.py  windowing.py
notebooks/: all_treesmall.tree  canonon_matrix.ipynb  component_distances.py  distance_analysis.ipynb  interpolation.ipynb  interpolation_strategies.ipynb  lattice_plot.ipynb  mid_point_rooting.ipynb  mobius_analyzer.py  non_existent_splits.ipynb  split_indices.experiment.ipynb  svg_export.ipynb  test_dev.py  test_lattice_construction.ipynb  tree_comparision_plot.ipynb  tree_permutations.ipynb
output/: pair119_context_109_129.newick  pair_119_tree_119.newick  pair_119_tree_120.newick  pair_119_two_trees.newick
profile/: profile_lattice.py  profile_ordering.py  profile_pipeline.py
scripts/: build_fasttree.sh  prepare_hiv_dataset.py  run_interpolation_with_logs.py
summaries/: COMPARISON_SUMMARY.md  NAN_HANDLING_FIX_SUMMARY.md  PHYLO_IO_COMPARISON.md  REROOTINGDEVPLAN.md  ROOTING_SUMMARY.md
test/: conftest.py  reproduce_reorder_snap.py  six_taxa_all_permutations.newick  test_compoent_distance.py  test_component_distance.py  test_component_distance_enhanced.py  test_distances.py  test_edge_ordering_integration.py  test_error_trace.py  test_failed_s_edge.py  test_fixed_lattice.py  test_functional_tree.py  test_interpolation_debug.py  test_interpolation_trace.py  test_io.py  test_iterative_lattice.py  test_jumping_taxa.py  test_lattice_construction.py  test_lattice_debug.py  test_lattice_debug_detailed.py  test_lattice_solutions.py  test_leave_order_distances.py  test_map_s_edges_to_original_by_index.py  test_midpoint_rooting.py  test_norovirus_pipeline.py  test_operations.py  test_ownership_tracker.py  test_parse_newick.py  test_partition_set.py  test_pivot_split_registry_sibling_logic.py  test_pruning_design.py  test_request.py  test_s_edge_analysis.py  test_specific_failed_s_edge.py  test_specific_s_edge_not_found.py  test_split_claim_tracker.py  test_tree_class.py  test_tree_coloring.py  test_tree_consensus.py  test_tree_interpolation.py  (+3 more)
test-data/: reverse_test_tree_moving_downwards_easier.tree  test_alignment.py
tests/: manual_sse_msa_test.py  manual_sse_test.py  test_contingent_split_collision.py  test_patristic_compensation.py  test_planning_no_loop.py  test_two_trees_interpolation.py
webapp/: __init__.py  config.py  pyproject.toml  run.py
webapp/logs/: debug_log.html
webapp/routes/: __init__.py  helpers.py  routes.py
webapp/services/: __init__.py  core.py  frontend_data_builder.py  logging_config.py  movie_data.py  msa_utils.py  serialization_utils.py  tree_processing_service.py
webapp/services/logging/: __init__.py  config.py
webapp/services/msa/: __init__.py  utils.py
webapp/services/serialization/: __init__.py  partition.py
webapp/services/sse/: __init__.py  channels.py  decorators.py  messages.py
webapp/services/trees/: __init__.py  frontend_builder.py  movie_data.py  processing.py
(+831 files in other folders)
