[tool.poetry]
name = "brancharchitect"
version = "0.64.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "brancharchitect"}]
include = ["brancharchitect/**/*.pyi"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pydantic = "^2.0"
networkx = "^3.5"
scipy = "^1.11.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.0"
plotly = "^5.0.0"
seaborn = "^0.12.0"
tqdm = "^4.65.0"
tabulate = "^0.9.0"
tskit = "^0.6.4"
msprime = "^1.3.4"
ipywidgets = "^8.0.0"
scikit-bio = "^0.6.3"
nbformat = "^5.10.4"
python-constraint = "^1.4.0"
ortools = "^9.10.4067"
toytree = "^3.0.10"
toyplot = "^2.0.0"

# Optional dependencies for advanced plotting features
cairosvg = {version = "^2.8.2", optional = true}
pycairo = {version = "^1.28.0", optional = true}

[tool.poetry.extras]
plotting = ["cairosvg", "pycairo"]


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[tool.poetry.group.dev.dependencies]
pytest-timeout = "^2.3.1"
ipykernel = "^6.29.4"
pytest-html = "^3.2.0"

# --- Add these two lines to enable static type checks in tests ---
mypy = "^1.5.1"
pytest-mypy = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "brancharchitect.*"
ignore_missing_imports = false

# --- This section tells pytest to run MyPy automatically ---
[tool.pytest.ini_options]
addopts = "--mypy"  # Tells pytest to run mypy checks each time
mypy_ignore_missing_imports = true
timeout = 10  # Default timeout for tests (overridden by per-test marks)
