[tool.poetry]
name = "brancharchitect"
version = "0.64.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "brancharchitect"}]
include = ["brancharchitect/**/*.pyi"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
plotly = "^5.0.0"
seaborn = "^0.12.0"
tabulate = "^0.9.0"
scikit-bio = "^0.6.3"

# Optional dependencies for advanced plotting features
cairosvg = {version = "^2.8.2", optional = true}
# pycairo = {version = "^1.28.0", optional = true}  # Commented out - unused
biopython = "^1.86"
flask = "^3.1.2"
flask-cors = "^6.0.1"
joblib = "^1.4.0"
msa_to_trees = {path = "msa_to_trees", develop = true}
flask-compress = "^1.23"
waitress = "^3.0.2"

[tool.poetry.extras]
plotting = ["cairosvg"]


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
hypothesis = "^6.100.0"

[tool.poetry.group.dev.dependencies]
pytest-timeout = "^2.3.1"
ipykernel = "^6.29.4"
pytest-html = "^3.2.0"

# --- Add these two lines to enable static type checks in tests ---
mypy = "^1.5.1"
pytest-mypy = "^0.10.3"
notebook = "^7.5.1"
hypothesis = "^6.149.0"
deptry = "^0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "brancharchitect.*"
ignore_missing_imports = false

# --- This section tells pytest to run MyPy automatically ---
[tool.pytest.ini_options]
addopts = "--mypy"  # Tells pytest to run mypy checks each time
mypy_ignore_missing_imports = true
timeout = 10  # Default timeout for tests (overridden by per-test marks)

