[tool.poetry]
name = "brancharchitect-webapp"
version = "0.1.0"
description = "Web application for BranchArchitect movie pipeline"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.2"
flask-cors = "^6.0.1"
flask-compress = "^1.23"
werkzeug = "^3.0.0"
waitress = "^3.0.2"
orjson = "^3.10.0"
# Note: brancharchitect is imported via PYTHONPATH to avoid heavy scientific dependencies

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry.scripts]
# webapp = "webapp.run:main"
